<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YFreeSoftware</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="know_more">Know More</string>
    <string name="info0_your_mail_account">followng Mail accounts of yours are hacked already &lt;br&gt;(dont panic :P) &lt;br&gt; &lt;br&gt;
         This is to get your attention,But without your permission many of them using your information,Do you know that?  &lt;br&gt; &lt;br&gt;
         Even i am reading your information,while you reading the comments. This application is to inform you ,that your data is not secured and we explained with some examples.&lt;br&gt; &lt;br&gt;
         Basically in the first line itself you can see, I already know your name or you mail id.But you dint provided that to me.&lt;br&gt; &lt;br&gt;
         By Using these information, They can structure you out very simply.
        
    </string>
    
    <string name="info1_i_can_know_more">I can know more about you without your knowledge. \n and i can take your information without your PERMISSION</string>
    <string name="info2_do_you_know_survielance">Do You Know about survielance? and how they do from you mobile? If you dont want to know about that, \t Please uninstall the application from your mobile (or) press KNOW MORE Button</string>
    <string name="basic_info">Basic Info</string>
    <string name="applications">Application</string>
    <string name="message">Message</string>
    <string name="contacts">Contacts</string>
    <string name="other_info">OtherInfo</string>
    
    <string name="otherInfopage_info1">Application will send the details of  yours,from the mobile to their server , when internet is switched on. You don need to send any data </string>

</resources>
